// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTableContainer component tests Should render DataTableContainer correctly 1`] = `
<DataTableContainer
  ouiaContext={
    Object {
      "isOuia": false,
      "ouiaId": null,
    }
  }
>
  <PageSection
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
    >
      <PageTitle
        title="User Tasks"
      >
        <Title
          headingLevel="h1"
          size="4xl"
        >
          <h1
            className="pf-c-title pf-m-4xl"
          >
            User Tasks
          </h1>
        </Title>
      </PageTitle>
      <Component>
        <ComponentWithOuia
          component={[Function]}
          componentProps={
            Object {
              "children": Array [
                <BreadcrumbItem>
                  <Link
                    to="/"
                  >
                    Home
                  </Link>
                </BreadcrumbItem>,
                <BreadcrumbItem
                  isActive={true}
                >
                  User Tasks
                </BreadcrumbItem>,
              ],
            }
          }
          consumerContext={
            Object {
              "isOuia": false,
              "ouiaId": null,
            }
          }
        >
          <Breadcrumb
            ouiaContext={
              Object {
                "isOuia": false,
                "ouiaId": null,
              }
            }
          >
            <nav
              aria-label="Breadcrumb"
              className="pf-c-breadcrumb"
            >
              <ol
                className="pf-c-breadcrumb__list"
              >
                <BreadcrumbItem>
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <Link
                      to="/"
                    >
                      <LinkAnchor
                        href="/"
                        navigate={[Function]}
                      >
                        <a
                          href="/"
                          onClick={[Function]}
                        >
                          Home
                        </a>
                      </LinkAnchor>
                    </Link>
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  isActive={true}
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    User Tasks
                  </li>
                </BreadcrumbItem>
              </ol>
            </nav>
          </Breadcrumb>
        </ComponentWithOuia>
      </Component>
    </section>
  </PageSection>
  <PageSection>
    <section
      className="pf-c-page__main-section"
    >
      <Grid
        gutter="md"
      >
        <div
          className="pf-l-grid pf-m-gutter"
        >
          <GridItem
            span={12}
          >
            <div
              className="pf-l-grid__item pf-m-12-col"
            >
              <Card
                className="data-table"
              >
                <article
                  className="pf-c-card data-table"
                >
                  <MockDataTable
                    LoadingComponent={
                      <Bullseye>
                        <KogitoSpinner
                          spinnerText="Loading user tasks..."
                        />
                      </Bullseye>
                    }
                    columns={
                      Array [
                        Object {
                          "data": "processId",
                          "title": "ProcessId",
                        },
                        Object {
                          "data": "name",
                          "title": "Name",
                        },
                        Object {
                          "data": "priority",
                          "title": "Priority",
                        },
                        Object {
                          "data": "processInstanceId",
                          "title": "ProcessInstanceId",
                        },
                        Object {
                          "cellTransforms": Array [
                            [Function],
                          ],
                          "data": "state",
                          "title": "State",
                        },
                      ]
                    }
                    data={
                      Array [
                        Object {
                          "__typename": "UserTaskInstance",
                          "actualOwner": null,
                          "adminGroups": Array [],
                          "adminUsers": Array [],
                          "completed": null,
                          "description": "",
                          "excludedUsers": Array [],
                          "id": "047ec38d-5d57-4330-8c8d-9bd67b53a529",
                          "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null}}",
                          "name": "Confirm travel",
                          "outputs": "{\\"ActorId\\":\\"\\"}",
                          "potentialGroups": Array [],
                          "potentialUsers": Array [],
                          "priority": "1",
                          "processId": "travels",
                          "processInstanceId": "9ae407dd-cdfa-4722-8a49-0a6d2e14550d",
                          "referenceName": "ConfirmTravel",
                          "rootProcessId": null,
                          "rootProcessInstanceId": null,
                          "started": "2020-02-19T10:59:34.185Z",
                          "state": "Ready",
                        },
                        Object {
                          "__typename": "UserTaskInstance",
                          "actualOwner": null,
                          "adminGroups": Array [],
                          "adminUsers": Array [],
                          "completed": null,
                          "description": null,
                          "excludedUsers": Array [],
                          "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                          "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}\\"",
                          "name": "Apply for visa",
                          "outputs": "{}",
                          "potentialGroups": Array [],
                          "potentialUsers": Array [],
                          "priority": "1",
                          "processId": "travels",
                          "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                          "referenceName": "VisaApplication",
                          "rootProcessId": null,
                          "rootProcessInstanceId": null,
                          "started": "2020-02-19T11:11:56.282Z",
                          "state": null,
                        },
                      ]
                    }
                    isLoading={false}
                    networkStatus={1}
                    refetch={[MockFunction]}
                  />
                </article>
              </Card>
            </div>
          </GridItem>
        </div>
      </Grid>
    </section>
  </PageSection>
</DataTableContainer>
`;

exports[`DataTableContainer component tests Should render DataTableContainer with no data 1`] = `
<DataTableContainer
  ouiaContext={
    Object {
      "isOuia": false,
      "ouiaId": null,
    }
  }
>
  <PageSection
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
    >
      <PageTitle
        title="User Tasks"
      >
        <Title
          headingLevel="h1"
          size="4xl"
        >
          <h1
            className="pf-c-title pf-m-4xl"
          >
            User Tasks
          </h1>
        </Title>
      </PageTitle>
      <Component>
        <ComponentWithOuia
          component={[Function]}
          componentProps={
            Object {
              "children": Array [
                <BreadcrumbItem>
                  <Link
                    to="/"
                  >
                    Home
                  </Link>
                </BreadcrumbItem>,
                <BreadcrumbItem
                  isActive={true}
                >
                  User Tasks
                </BreadcrumbItem>,
              ],
            }
          }
          consumerContext={
            Object {
              "isOuia": false,
              "ouiaId": null,
            }
          }
        >
          <Breadcrumb
            ouiaContext={
              Object {
                "isOuia": false,
                "ouiaId": null,
              }
            }
          >
            <nav
              aria-label="Breadcrumb"
              className="pf-c-breadcrumb"
            >
              <ol
                className="pf-c-breadcrumb__list"
              >
                <BreadcrumbItem>
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <Link
                      to="/"
                    >
                      <LinkAnchor
                        href="/"
                        navigate={[Function]}
                      >
                        <a
                          href="/"
                          onClick={[Function]}
                        >
                          Home
                        </a>
                      </LinkAnchor>
                    </Link>
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  isActive={true}
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    User Tasks
                  </li>
                </BreadcrumbItem>
              </ol>
            </nav>
          </Breadcrumb>
        </ComponentWithOuia>
      </Component>
    </section>
  </PageSection>
  <PageSection>
    <section
      className="pf-c-page__main-section"
    >
      <Grid
        gutter="md"
      >
        <div
          className="pf-l-grid pf-m-gutter"
        >
          <GridItem
            span={12}
          >
            <div
              className="pf-l-grid__item pf-m-12-col"
            >
              <Card
                className="data-table"
              >
                <article
                  className="pf-c-card data-table"
                >
                  <MockDataTable
                    LoadingComponent={
                      <Bullseye>
                        <KogitoSpinner
                          spinnerText="Loading user tasks..."
                        />
                      </Bullseye>
                    }
                    columns={
                      Array [
                        Object {
                          "data": "processId",
                          "title": "ProcessId",
                        },
                        Object {
                          "data": "name",
                          "title": "Name",
                        },
                        Object {
                          "data": "priority",
                          "title": "Priority",
                        },
                        Object {
                          "data": "processInstanceId",
                          "title": "ProcessInstanceId",
                        },
                        Object {
                          "cellTransforms": Array [
                            [Function],
                          ],
                          "data": "state",
                          "title": "State",
                        },
                      ]
                    }
                    isLoading={false}
                    networkStatus={1}
                    refetch={[MockFunction]}
                  />
                </article>
              </Card>
            </div>
          </GridItem>
        </div>
      </Grid>
    </section>
  </PageSection>
</DataTableContainer>
`;
